<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >


    <TextView
        android:id="@+id/positionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barcadebobarbold"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        />
    <TextView
        android:textAlignment="center"
        android:layout_weight="1"
        android:id="@+id/nameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:fontFamily="@font/barcadenobar"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <TextView
        android:textAlignment="center"
        android:id="@+id/scoreTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_score"
        android:fontFamily="@font/barcadenobar"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
</LinearLayout>