<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/glass">

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/dialog"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:padding="5dp"
                android:text="@string/alert"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/messageTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingTop="20dp"
                android:text="@string/you_don_t_have_profile_to_play_yet_nplease_create_a_profile"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/profileNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:autofillHints="name"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/your_profile_name"
                android:inputType="text"
                android:padding="20dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/saveProfileBtn"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>